--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 
 variables:
 
-  # Azure Resource Manager connection created during pipeline creation
+  # Azure Resource Manager connection created during pipeline yycreation
   azureSubscription: '4c8e7db9-7472-409e-8b5a-49c63cab73e1'
   
   # Web app name
